Oprettet med Colab

--- a/FirstEDA.ipynb
+++ b/FirstEDA.ipynb
@@ -41,9 +41,7 @@
         "\n",
         "The Global Findex database is the most comprehensive dataset on adult financial behaviors worldwide, capturing insights into how individuals save, borrow, make payments, and manage financial risks. Initiated by the World Bank in 2011, the dataset is based on nationally representative surveys of over 150,000 adults across more than 140 economies. The 2021 edition provides updated indicators on the use of both formal and informal financial services.\n",
         "\n",
-        "For this analysis, we will conduct an Exploratory Data Analysis (EDA) to uncover key patterns and trends in the financial behaviors of individuals globally. As this analysis is undertaken by a group of finance students with a strong interest in banking and personal finance, our focus will be on examining how different demographics access and use financial services across various economies.\n",
-        "\n",
-        "# **This is just a draft for what we could be writing to begin with**\n"
+        "For this analysis, we will conduct an Exploratory Data Analysis (EDA) to uncover key patterns and trends in the financial behaviors of individuals globally across regions and genders. As this analysis is undertaken by a group of finance students with a strong interest in banking and personal finance, our focus will be on examining how different demographics access and use financial services across various economies.\n"
       ],
       "metadata": {
         "id": "qKgRYOzDsfA7"
