Oprettet med Colab

--- a/FirstEDA.ipynb
+++ b/FirstEDA.ipynb
@@ -105,7 +105,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 256
+          "height": 236
         },
         "id": "9G5sCwa3V9wJ",
         "outputId": "e8fd1d37-7fbc-4c39-de2f-ba86105b8828"
@@ -1182,7 +1182,7 @@
       "cell_type": "code",
       "source": [
         "# Make age bins\n",
-        "bins = [15, 19, 35, 55, 70, 100]  # Age ranges: 0-19, 20-35, etc.\n",
+        "bins = [15, 19, 35, 55, 70, 100]  # Age ranges: 15-19, 20-35, etc.\n",
         "labels = ['Teens (15-19)', 'Young Adults (20-35)', 'Middle-Aged (36-55)', 'Seniors (56-69)', 'Elderly (70+)']\n",
         "\n",
         "# Creating a new column 'age_group' that assigns age categories\n",
@@ -1482,6 +1482,15 @@
       ],
       "metadata": {
         "id": "ZkM-xykiqWjE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Optimizing Digital Payment Services in Underserved Regions:"
+      ],
+      "metadata": {
+        "id": "2DAmhihkDuYG"
       }
     },
     {
